--- a/src/components/Carousel/Slidebox.module.css
+++ b/src/components/Carousel/Slidebox.module.css
@@ -1,12 +1,3 @@
-
-
-
-
-
-
-
-
-
 .card {
     width: 16.5rem;
     height: 400px;
@@ -45,8 +36,8 @@
     width: 28px;
     height: 28px;
 }
-.orangeText{
-    color: coral;
+.text{
+    color: rgb(0, 0, 0);
 }
 .grid {
     width: 100%; 
@@ -63,7 +54,7 @@
 }
 .textTitle {
     font-weight: 500;
-    color: #8c8b8b;
+    color: #000000;
     font-size: 1.2em;
     line-height: 1.5;
 }
