--- a/src/components/Property/Property.module.css
+++ b/src/components/Property/Property.module.css
@@ -58,12 +58,20 @@ nav{
     cursor: pointer;
     transform: scale(1.1);
 }
-.hero{
-    background: url(./Images/housesale.jpg);
-    background-size: auto;
+.heroImg{
+    position: relative;
+    height: 36rem;
     width: 100%;
-    height: 24rem;
     background-size: cover;
+    background-position: center; 
+    background-repeat: no-repeat;
+}
+.heroT{
+    position: absolute;
+    top: 32rem;
+    left: 20px;
+    color: white;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); 
 }
 .hero h1{
     position: absolute;
